<resources>
    <string name="app_name">PayLock</string>
    <string name="status_enabled">Status: Enabled</string>
    <string name="status_not_enabled">Status: Not enabled</string>
    <string name="credits_format">Credits: %1$d</string>
    <string name="opening_app_costs_you">Opening %1$s costs you.</string>
    <string name="credits_available_format">Credits available: %1$d (cost: 1)</string>
    <string name="wait_seconds_format">Wait %1$ds</string>
    <string name="challenge_question_format">What is %1$d + %2$d?</string>
    <string name="app_icon">App icon</string>
    <string name="blocked_apps_count_format">Blocked apps: %1$d</string>
    <string name="main_subtitle">Block distracting apps until you wait, solve, or pay.</string>
    <string name="enable_accessibility">Enable Accessibility</string>
    <string name="select_apps">Select Apps</string>
    <string name="reset_credits">Reset Credits</string>
    <string name="reset_blocked_apps">Reset Blocked Apps</string>
    <string name="open_accessibility_settings">Open Accessibility Settings</string>
</resources>